# Agent-

./: .env.example  .gitignore  PROJECT_MEMORY.md  README.md  app.py  pyproject.toml  个人简历.md  面试知识库.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src/agent/: __init__.py  engine.py  llm_client.py  orchestrator.py
src/api/: auth.py  deps.py  main.py  sse_stream.py
src/core/: config.py  model_client.py  models.py
src/infrastructure/: __init__.py  conversation_memory.py  indexing_pipeline.py  kb_manager.py  logger.py  metrics.py  rule_templates.py  rules_engine.py  session_manager.py  vector_store.py
src/skills/: __init__.py
tests/: benchmark_reflection.py  benchmark_results.json  conftest.py  real_clients.py  test_CodeExplainerSkill.py  test_DocumentChunkerSkill.py  test_OutlineGeneratorSkill.py  test_RagAnswer.py  test_UnitTestGeneratorSkill.py  test_VectorSearch.py  test_agent.py  test_api_config.py  test_api_e2e.py  test_base_skill.py  test_chart_advisor.py  test_chromadb_check.py  test_code_review.py  test_custom_skills.py  test_data_cleaner.py  test_document_loader.py  test_dual_retrieval.py  test_e2e.py  test_email_drafter.py  test_engine_with_skillmanager.py  test_fault_tolerance.py  test_graphrag_indexer.py  test_graphrag_searcher.py  test_infrastructure.py  test_langgraph_basic.py  test_langgraph_checkpoint.py  test_litellm_client.py  test_llm_client.py  test_meeting_summarizer.py  test_orchestrator.py  test_orchestrator_graphrag_routing.py  test_orchestrator_skill_discovery.py  test_orchestrator_with_llm.py  test_preset_skills.py  test_rag_e2e.py  test_rag_enhancements.py  (+10 more)
tests/e2e/: conftest.py  (+1 more)
(+93 files in other folders)
