[tool.poetry]
name = "enterprise_learning_agent"
version = "0.1.0"
description = "企业级学习教学&代码智能Agent"
authors = ["monster"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# 核心架构依赖
langchain = "^0.3.0"
langgraph = "^0.2.0"
langchain-community = "^0.3.0"
# 环境变量管理
python-dotenv = "^1.0.0"
# 基础文档解析
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
# 向量数据库基础版
chromadb = "^0.5.0"
# 嵌入模型
#langchain-huggingface = "^0.1.0"
# 前端交互
streamlit = "^1.38.0"
#>=2.33.0,<3.0.0
openai = ">=2.24.0,<3.0.0"
summa = "^1.2.0"
langdetect = "^1.0.9"
nltk = "^3.9.4"
beautifulsoup4 = "^4.14.3"
markdown = "^3.10.2"
scikit-learn = "^1.8.0"
roman = "^5.2"
typing-extensions = "^4.15.0"
loguru = "^0.7.3"
jieba = "^0.42.1"
#litellm = "^1.83.14"
litellm = ">=1.82.6,<2.0.0"
faiss-cpu = "^1.13.2"
graphrag = "^3.0.9"
tiktoken = "^0.12.0"
tenacity = "^9.1.4"
jinja2 = "^3.1.6"

python-slugify = "^8.0.4"
pyarrow = ">=22.0,<23.0"
dashscope = "^1.25.17"
pydantic = "^2.13.3"
json5 = "^0.14.0"
sympy = "^1.14.0"
langgraph-checkpoint-sqlite = ">=2.0.0,<3.0.0"
fastapi = "^0.136.1"
sse-starlette = "^3.4.2"
python-multipart = "^0.0.27"
vite = "^1.5.2"
akshare = "^1.18.60"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "real: 真实环境联调测试（需要 API Key）",
    "real_light: 轻量真实测试（仅嵌入模型，不需要 LLM）",
    "real_heavy: 重量真实测试（需要 LLM + 嵌入模型）",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 运行较慢的测试",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"